--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "b63b4dac-a97d-4c95-aa94-dd3ed11591a3",
    "metadata": {},
    "outputs": [
@@ -39,18 +39,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "train_data\\Barack Obama\n"
-     ]
-    },
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[2], line 33\u001b[0m\n\u001b[0;32m     29\u001b[0m     cropped_face\u001b[38;5;241m=\u001b[39mgray[y:y\u001b[38;5;241m+\u001b[39mh,x:x\u001b[38;5;241m+\u001b[39mw]\n\u001b[0;32m     32\u001b[0m     cv2\u001b[38;5;241m.\u001b[39mimshow(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mLIVE\u001b[39m\u001b[38;5;124m'\u001b[39m, cropped_face)\n\u001b[1;32m---> 33\u001b[0m     k\u001b[38;5;241m=\u001b[39mcv2\u001b[38;5;241m.\u001b[39mwaitKey(\u001b[38;5;241m0\u001b[39m)\n\u001b[0;32m     35\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m (k\u001b[38;5;241m==\u001b[39m\u001b[38;5;241m121\u001b[39m): \u001b[38;5;66;03m#check y\u001b[39;00m\n\u001b[0;32m     36\u001b[0m       cropped_face\u001b[38;5;241m=\u001b[39mcv2\u001b[38;5;241m.\u001b[39mresize(cropped_face,(img_size,img_size))\n",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
+      "train_data\\Barack Obama\n",
+      "train_data\\Donald Trump\n",
+      "train_data\\George W Bush\n"
      ]
     }
    ],
@@ -96,18 +87,49 @@
     "              target.append(categories_dict[label])\n",
     "            \n",
     "\n",
-    "        if (k==27):\n",
+    "        if (k==32):\n",
     "            break\n",
     "cv2.destroyAllWindows()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "b2bee6d7-5340-483f-b02a-9b29157afcd9",
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(13, 50, 50)\n",
+      "(13,)\n"
+     ]
+    }
+   ],
+   "source": [
+    "data=np.array(data)\n",
+    "target=np.array(target)\n",
+    "\n",
+    "print(data.shape)\n",
+    "print(target.shape)\n",
+    "\n",
+    "data=data.reshape(data.shape[0],data.shape[1]*data.shape[2])\n",
+    "\n",
+    "np.save('data',data)\n",
+    "np.save('target',target)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4ead2767-3441-4221-a8af-c1bc9c006b03",
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import collections\n",
+    "print()"
+   ]
   }
  ],
  "metadata": {
